Add style to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,8 @@
           </li>
         </ul>
 
-        <ul class="list">
-          <li>
+        <ul class="list list-portfolio-flex">
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/pagesbankapp.jpg"
@@ -82,11 +82,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Banking App Interface Concept</h2>
-              <p class="p-font">App</p>
+              <h2 class="fontshthre fonts-in-title-card">Banking App Interface Concept</h2>
+              <p class="p-font p-in-card">App</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/PhoneReadQRcode.jpg"
@@ -94,11 +94,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Cashless Payment</h2>
-              <p class="p-font">Marketing</p>
+              <h2 class="fontshthre fonts-in-title-card">Cashless Payment</h2>
+              <p class="p-font p-in-card">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/Computerandsmartphonewithdesamefoto.jpg"
@@ -107,11 +107,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Meditation App</h2>
-              <p class="p-font">App</p>
+              <h2 class="fontshthre fonts-in-title-card">Meditation App</h2>
+              <p class="p-font p-in-card">App</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/cocpitincar.jpg"
@@ -119,11 +119,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Taxi Service</h2>
-              <p class="p-font">Marketing</p>
+              <h2 class="fontshthre fonts-in-title-card">Taxi Service</h2>
+              <p class="p-font p-in-card">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/destopwithnun.jpg"
@@ -131,11 +131,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Screen Illustrations</h2>
-              <p class="p-font">Design</p>
+              <h2 class="fontshthre fonts-in-title-card">Screen Illustrations</h2>
+              <p class="p-font p-in-card">Design</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/Womeninorangedress.jpg"
@@ -143,11 +143,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Online Courses</h2>
-              <p class="p-font">Marketing</p>
+              <h2 class="fontshthre fonts-in-title-card">Online Courses</h2>
+              <p class="p-font p-in-card">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/leaflet.jpg"
@@ -155,12 +155,12 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Instagram Stories Concept</h2>
-              <p class="p-font">Design</p>
+              <h2 class="fontshthre fonts-in-title-card">Instagram Stories Concept</h2>
+              <p class="p-font p-in-card">Design</p>
             </a>
           </li>
 
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/womenwithbag.jpg"
@@ -168,11 +168,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Organic Food</h2>
-              <p class="p-font">Web Site</p>
+              <h2 class="fontshthre fonts-in-title-card">Organic Food</h2>
+              <p class="p-font p-in-card">Web Site</p>
             </a>
           </li>
-          <li>
+          <li class="list-card">
             <a class="link" href="">
               <img
                 src="./images/cafeewitchmilk.jpg"
@@ -180,8 +180,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="fontshthre">Fresh Coffee</h2>
-              <p class="p-font">Web Site</p>
+              <h2 class="fontshthre fonts-in-title-card">Fresh Coffee</h2>
+              <p class="p-font p-in-card">Web Site</p>
             </a>
           </li>
         </ul>
