change in section3

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
       </section>
 
       <!-- Section 2-->
-      <section>
+      <section class="section-what-are-we-doing">
         <div class="container">
           <h2 class="fontshtwo">What are we doing</h2>
-          <ul class="list list-section2-flex">
-            <li>
+          <ul class="list list-section-two-flex">
+            <li class="li-section-two-flex">
               <img
                 src="./images/oldmc.jpg"
                 alt="Old mac"
