--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="li-section-two-flex">
               <img
                 src="./images/samrtphone.jpg"
                 alt="Smartphone with diffrent screens"
@@ -125,7 +125,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="li-section-two-flex">
               <img
                 src="./images/smartandlap.jpg"
                 alt="Laptop nnd smartphone"
@@ -141,7 +141,7 @@
       <section class="section-team">
         <div class="container all-section">
           <h2 class="fontshtwo">Our Team</h2>
-          <ul class="list list-section3-flex">
+          <ul class="list list-section-thre-flex">
             <li class="li-section-team list-section3-item-flex">
               <img
                 src="./images/mark.jpg"
@@ -149,8 +149,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="fontshthre fonts_name_section3">Mark Guerrero</h3>
-              <p class="p-font p-in-sectio3">Product Designer</p>
+              <div class="list-section-threflex-div">
+                <h3 class="fontshthre fonts_name_section3">Mark Guerrero</h3>
+                <p class="p-in-sectio3">Product Designer</p>
+              </div>
             </li>
             <li class="li-section-team list-section3-item-flex">
               <img
@@ -159,8 +161,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="fontshthre fonts_name_section3">Tom Ford</h3>
-              <p class="p-font p-in-sectio3">Frontend Developer</p>
+              <div class="list-section-threflex-div">
+                <h3 class="fontshthre fonts_name_section3">Tom Ford</h3>
+                <p class="p-font p-in-sectio3">Frontend Developer</p>
+              </div>
             </li>
             <li class="li-section-team list-section3-item-flex">
               <img
@@ -169,8 +173,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="fontshthre fonts_name_section3">Camila Garcia</h3>
-              <p class="p-font p-in-sectio3">Marketing</p>
+              <div class="list-section-threflex-div">
+                <h3 class="fontshthre fonts_name_section3">Camila Garcia</h3>
+                <p class="p-font p-in-sectio3">Marketing</p>
+              </div>
             </li>
             <li class="li-section-team list-section3-item-flex">
               <img
@@ -179,8 +185,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="fontshthre fonts_name_section3">Daniel Wilson</h3>
-              <p class="p-font p-in-sectio3">UI Designer</p>
+              <div class="list-section-threflex-div">
+                <h3 class="fontshthre fonts_name_section3">Daniel Wilson</h3>
+                <p class="p-font p-in-sectio3">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -189,7 +197,7 @@
     <footer class="fooster-parameters">
       <!--LOGO-->
       <div class="container all-section">
-        <a class="logo link" href="./index.html"
+        <a class="logo link-footer" href="./index.html"
           >WEB<span class="logo-studio-fooster">Studio</span></a
         >
         <p class="p-font-fooster">
