--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container all-section header-div">
         <nav class="navi-div">
           <!--LOGO-->
@@ -59,139 +59,147 @@
     <main>
       <section class="portfolio-filters">
         <div class="container all-section">
-        <h1 class="fontshone visually-hidden">Images</h1>
-        <ul class="list filters-flex">
-          <li><button class="filters-buttons" type="button">All</button></li>
-          <li>
-            <button class="filters-buttons" type="button">Web Site</button>
-          </li>
-          <li><button class="filters-buttons" type="button">App</button></li>
-          <li><button class="filters-buttons" type="button">Design</button></li>
-          <li>
-            <button class="filters-buttons" type="button">Marketing</button>
-          </li>
-        </ul>
+          <h1 class="fontshone visually-hidden">Images</h1>
+          <ul class="list filters-flex">
+            <li><button class="filters-buttons" type="button">All</button></li>
+            <li>
+              <button class="filters-buttons" type="button">Web Site</button>
+            </li>
+            <li><button class="filters-buttons" type="button">App</button></li>
+            <li>
+              <button class="filters-buttons" type="button">Design</button>
+            </li>
+            <li>
+              <button class="filters-buttons" type="button">Marketing</button>
+            </li>
+          </ul>
 
-        <ul class="list list-portfolio-flex">
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/pagesbankapp.jpg"
-                alt="Application pages view for logging in to the bank and managing your bank account. 
+          <ul class="list list-portfolio-flex">
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/pagesbankapp.jpg"
+                  alt="Application pages view for logging in to the bank and managing your bank account. 
                 The dominant colors are purple and white. Purple at the top of the page, white at the bottom"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Banking App Interface Concept</h2>
-              <p class="p-font p-in-card">App</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/PhoneReadQRcode.jpg"
-                alt="Smartphone held in fingers and reading QR code with smartphone."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Cashless Payment</h2>
-              <p class="p-font p-in-card">Marketing</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/Computerandsmartphonewithdesamefoto.jpg"
-                alt="On the laptop screen and on the smartphone screen there is the same 
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">
+                  Banking App Interface Concept
+                </h2>
+                <p class="p-font p-in-card">App</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/PhoneReadQRcode.jpg"
+                  alt="Smartphone held in fingers and reading QR code with smartphone."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">Cashless Payment</h2>
+                <p class="p-font p-in-card">Marketing</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/Computerandsmartphonewithdesamefoto.jpg"
+                  alt="On the laptop screen and on the smartphone screen there is the same 
               colorful image with the words - return to normalcy."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Meditation App</h2>
-              <p class="p-font p-in-card">App</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/cocpitincar.jpg"
-                alt="Cockpit in the car. Smartphone in the holder with staking turned on."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Taxi Service</h2>
-              <p class="p-font p-in-card">Marketing</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/destopwithnun.jpg"
-                alt="Five images with desktop proposals with a moon theme"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Screen Illustrations</h2>
-              <p class="p-font p-in-card">Design</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/Womeninorangedress.jpg"
-                alt="A woman in a yellow sweater, gray hat and glasses looks at the smartphone"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Online Courses</h2>
-              <p class="p-font p-in-card">Marketing</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/leaflet.jpg"
-                alt="Description of home control presented by a woman in a white turtleneck. Control options via smartphone and touch screen are shown."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Instagram Stories Concept</h2>
-              <p class="p-font p-in-card">Design</p>
-            </a>
-          </li>
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">Meditation App</h2>
+                <p class="p-font p-in-card">App</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/cocpitincar.jpg"
+                  alt="Cockpit in the car. Smartphone in the holder with staking turned on."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">Taxi Service</h2>
+                <p class="p-font p-in-card">Marketing</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/destopwithnun.jpg"
+                  alt="Five images with desktop proposals with a moon theme"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">
+                  Screen Illustrations
+                </h2>
+                <p class="p-font p-in-card">Design</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/Womeninorangedress.jpg"
+                  alt="A woman in a yellow sweater, gray hat and glasses looks at the smartphone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">Online Courses</h2>
+                <p class="p-font p-in-card">Marketing</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/leaflet.jpg"
+                  alt="Description of home control presented by a woman in a white turtleneck. Control options via smartphone and touch screen are shown."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">
+                  Instagram Stories Concept
+                </h2>
+                <p class="p-font p-in-card">Design</p>
+              </a>
+            </li>
 
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/womenwithbag.jpg"
-                alt="A woman dressed in gray pants, a gray long sweater and a white blouse carries fruits and vegetables in a white mesh bag."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Organic Food</h2>
-              <p class="p-font p-in-card">Web Site</p>
-            </a>
-          </li>
-          <li class="list-card">
-            <a class="link" href="">
-              <img
-                src="./images/cafeewitchmilk.jpg"
-                alt="The barista pours milk to create a pattern on the surface of the coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre fonts-in-title-card">Fresh Coffee</h2>
-              <p class="p-font p-in-card">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/womenwithbag.jpg"
+                  alt="A woman dressed in gray pants, a gray long sweater and a white blouse carries fruits and vegetables in a white mesh bag."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">Organic Food</h2>
+                <p class="p-font p-in-card">Web Site</p>
+              </a>
+            </li>
+            <li class="list-card">
+              <a class="link" href="">
+                <img
+                  src="./images/cafeewitchmilk.jpg"
+                  alt="The barista pours milk to create a pattern on the surface of the coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre fonts-in-title-card">Fresh Coffee</h2>
+                <p class="p-font p-in-card">Web Site</p>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <footer class="fooster-parameters">
       <!--LOGO-->
       <div class="container all-section">
-        <a class="logo link" href="./index.html"
+        <a class="logo link-footer" href="./index.html"
           >WEB<span class="logo-studio-fooster">Studio</span></a
         >
         <p class="p-font-fooster">
