change parameters calc

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="section-what-we-use">
         <div class="container all-section">
           <h2 class="visually-hidden">What we use</h2>
-          <ul class="list list-section1-flex">
+          <ul class="list list-section-one-flex">
             <li class="li-what-we-use">
               <h3 class="fontshthre">Strategy</h3>
               <p class="p-font">
@@ -154,7 +154,7 @@
                 <p class="p-in-sectio3">Product Designer</p>
               </div>
             </li>
-            <li class="li-section-team list-section3-item-flex">
+            <li class="li-section-team list-section-thre-flex">
               <img
                 src="./images/tom.jpg"
                 alt="smiling brunette in a blue shirt"
@@ -166,7 +166,7 @@
                 <p class="p-font p-in-sectio3">Frontend Developer</p>
               </div>
             </li>
-            <li class="li-section-team list-section3-item-flex">
+            <li class="li-section-team list-section-thre-flex">
               <img
                 src="./images/camila.jpg"
                 alt="brunette with long hair falling to her shoulders in a pink sweater"
@@ -178,7 +178,7 @@
                 <p class="p-font p-in-sectio3">Marketing</p>
               </div>
             </li>
-            <li class="li-section-team list-section3-item-flex">
+            <li class="li-section-team list-section-thre-flex">
               <img
                 src="./images/daniel.jpg"
                 alt="a dark-haired man with facial hair in a gray T-shirt"
