Index change css code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       <!-- Section 1-->
       <section class="section-what-we-use">
         <div class="container all-section">
-          <h2 class="visually-hidden">What we use</h2>
+          <div class="visually-hidden">
+            <h2>What we use</h2>
+          </div>
           <ul class="list list-section-one-flex">
             <li class="li-what-we-use">
               <h3 class="fontshthre">Strategy</h3>
@@ -137,20 +139,84 @@
         </div>
       </section>
 
-      <!-- Section 3-->
-      <section class="section-team">
-        <div class="container all-section">
+      <section class="team-section all-section">
+        <div class="container">
           <h2 class="fontshtwo">Our Team</h2>
-          <ul class="list list-section-thre-flex">
-            <li class="li-section-team list-section3-item-flex">
+          <ul class="team-gallery-grid flex-grid">
+            <li class="team-li-flex-grid">
               <img
                 src="./images/mark.jpg"
                 alt="smiling dark-haired man with beard and mustache in blue shirt"
                 width="264"
                 height="260"
               />
-              <div class="list-section-threflex-div">
-                <h3 class="fontshthre fonts_name_section3">Mark Guerrero</h3>
+              <div class="team-div-li-felx-grid">
+                <h3 class="fontshthre team-h3-div-li-flex-grid">
+                  Mark Guerrero
+                </h3>
+                <p class="team-p-div-li-felx-grid">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-li-flex-grid">
+              <img
+                src="./images/tom.jpg"
+                alt="smiling brunette in a blue shirt"
+                width="264"
+                height="260"
+              />
+              <div class="team-div-li-felx-grid">
+                <h3 class="fontshthre fonts_name_section-thre">Tom Ford</h3>
+                <p class="team-p-div-li-felx-grid">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-li-flex-grid">
+              <img
+                src="./images/camila.jpg"
+                alt="brunette with long hair falling to her shoulders in a pink sweater"
+                width="264"
+                height="260"
+              />
+              <div class="team-div-li-felx-grid">
+                <h3 class="fontshthre fonts_name_section-thre">
+                  Camila Garcia
+                </h3>
+                <p class="team-p-div-li-felx-grid">Marketing</p>
+              </div>
+            </li>
+            <li class="team-li-flex-grid">
+              <img
+                src="./images/daniel.jpg"
+                alt="a dark-haired man with facial hair in a gray T-shirt"
+                width="264"
+                height="260"
+              />
+              <div class="team-div-li-felx-grid">
+                <h3 class="fontshthre fonts_name_section-thre">
+                  Daniel Wilson
+                </h3>
+                <p class="team-p-div-li-felx-grid">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Section 3-->
+      <!-- <section class="section-team">
+        <div class="container all-section">
+          <h2 class="fontshtwo">Our Team</h2>
+          <ul class="list list-section-thre-flex">
+            <li class="li-section-team list-section-thre-flex">
+              <img
+                src="./images/mark.jpg"
+                alt="smiling dark-haired man with beard and mustache in blue shirt"
+                width="264"
+                height="260"
+              />
+              <div class="list-section-thre-flex-div">
+                <h3 class="fontshthre fonts_name_section-thre">
+                  Mark Guerrero
+                </h3>
                 <p class="p-in-sectio3">Product Designer</p>
               </div>
             </li>
@@ -161,8 +227,8 @@
                 width="264"
                 height="260"
               />
-              <div class="list-section-threflex-div">
-                <h3 class="fontshthre fonts_name_section3">Tom Ford</h3>
+              <div class="list-section-thre-flex-div">
+                <h3 class="fontshthre fonts_name_section-thre">Tom Ford</h3>
                 <p class="p-font p-in-sectio3">Frontend Developer</p>
               </div>
             </li>
@@ -173,8 +239,10 @@
                 width="264"
                 height="260"
               />
-              <div class="list-section-threflex-div">
-                <h3 class="fontshthre fonts_name_section3">Camila Garcia</h3>
+              <div class="list-section-thre-flex-div">
+                <h3 class="fontshthre fonts_name_section-thre">
+                  Camila Garcia
+                </h3>
                 <p class="p-font p-in-sectio3">Marketing</p>
               </div>
             </li>
@@ -185,15 +253,17 @@
                 width="264"
                 height="260"
               />
-              <div class="list-section-threflex-div">
-                <h3 class="fontshthre fonts_name_section3">Daniel Wilson</h3>
+              <div class="list-section-thre-flex-div">
+                <h3 class="fontshthre fonts_name_section-thre">
+                  Daniel Wilson
+                </h3>
                 <p class="p-font p-in-sectio3">UI Designer</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
-    </main>
+    --></main>
     <footer class="fooster-parameters">
       <!--LOGO-->
       <div class="container all-section">
