change class title h3

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </section>
 
-      <section class="team-section all-section">
+      <section class="all-section">
         <div class="container">
           <h2 class="fontshtwo">Our Team</h2>
           <ul class="team-gallery-grid flex-grid">
@@ -151,7 +151,7 @@
                 height="260"
               />
               <div class="team-div-li-felx-grid">
-                <h3 class="fontshthre team-h3-div-li-flex-grid">
+                <h3 class="fontshthre team-h-div-li-flex-grid">
                   Mark Guerrero
                 </h3>
                 <p class="team-p-div-li-felx-grid">Product Designer</p>
@@ -165,7 +165,7 @@
                 height="260"
               />
               <div class="team-div-li-felx-grid">
-                <h3 class="fontshthre fonts_name_section-thre">Tom Ford</h3>
+                <h3 class="fontshthre team-h-div-li-flex-grid">Tom Ford</h3>
                 <p class="team-p-div-li-felx-grid">Frontend Developer</p>
               </div>
             </li>
@@ -177,7 +177,7 @@
                 height="260"
               />
               <div class="team-div-li-felx-grid">
-                <h3 class="fontshthre fonts_name_section-thre">
+                <h3 class="fontshthre team-h-div-li-flex-grid">
                   Camila Garcia
                 </h3>
                 <p class="team-p-div-li-felx-grid">Marketing</p>
@@ -191,7 +191,7 @@
                 height="260"
               />
               <div class="team-div-li-felx-grid">
-                <h3 class="fontshthre fonts_name_section-thre">
+                <h3 class="fontshthre team-h-div-li-flex-grid">
                   Daniel Wilson
                 </h3>
                 <p class="team-p-div-li-felx-grid">UI Designer</p>
